force-app/main/default/objects/Approval_Matrice__c/fields/First_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First-Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Matrices</relationshipLabel>
    <relationshipName>ApprovalMatrices</relationshipName>
    <type>Lookup</type>
</CustomField>