force-app/main/default/objects/Approval_Matrice__c/fields/Second_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second-Level Approver</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Approval Matrices (Second-Level Approver)</relationshipLabel>
    <relationshipName>Approval_Matrices1</relationshipName>
    <type>Lookup</type>
</CustomField>