force-app/main/default/objects/Approval_Matrice__c/fields/Third_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>Third_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third-Level Approver</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Approval Matrices (Third-Level Approver)</relationshipLabel>
    <relationshipName>Approval_Matrices2</relationshipName>
    <type>Lookup</type>
</CustomField>