force-app/main/default/objects/Approval_Matrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Country__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>First_Level_Approver__c</columns>
    <columns>Second_Level_Approver__c</columns>
    <columns>Third_Level_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>